tests/fixtures/syntax/invalid/document_case_title_workspace_path_literal.repor
# title requires a string literal; a workspace path literal parses but is
# rejected as semantic.literal.kind_mismatch.
document case {
  title <"a.txt">
}

case "never constructed" {
  $ true
  assert {
    exit 0
  }
}
